# revo-tax

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
revo_tax/: common.py  consolidated_report_manager.py  currency.py  input_handling.py  report_sanitizer.py  savings_account.py
revo_tax/accounts/: brokerage.py  savings.py
