[project]
name = "RevoTax"
version = "0.1.0"
description = "Helps you calculate the taxes for Revolut in Poland."
requires-python = ">=3.14"
dependencies = [
    "arguably>=1.3.0",
    "currencyconverter>=0.18.14",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
